updated some issues found during static analysis